dataset1235/2025-2/2947369575/users/2007236882/executions/1003782500_1927446959.log
== RUN (2025-08-27 23:05:59)
-- CODE: 
n = float(inpt())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:06:01)
-- CODE: 
n = float(inpt())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inpt())
              ^^^^
NameError: name 'inpt' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:03:40)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(roud(X,2)))
print(float(roudd(Y,2)))
print(float(roud(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:05:36)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:03:37)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(roud(X,2)))
print(float(roudd(Y,2)))
print(float(roud(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:05:34)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:07:17)
-- CODE: 
n = float(input())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:07:16)
-- CODE: 
n = float(input())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
---- user output:
45.56
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
---- user output:
9.25
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
---- user output:
120.47
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
---- user output:
1320.12
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
---- user output:
2007.69
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
---- user output:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:04:34)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(roud(X,2)))
print(float(roud(Y,2)))
print(float(roud(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:05:42)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:05:43)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:05:39)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(round(X,2)))
print(float(round(Y,2)))
print(float(round(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:04:36)
-- CODE: 
n = float(inptu())

X = float(n*27/100)
Y = float(n+n*42/100)
Z = float(n-n*63/100)

print(float(roud(X,2)))
print(float(roud(Y,2)))
print(float(roud(Z,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
123.14
---- correct output:
33.25
174.86
45.56
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 2:
---- input:
25.00
---- correct output:
6.75
35.5
9.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 3:
---- input:
325.60
---- correct output:
87.91
462.35
120.47
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 4:
---- input:
3567.90
---- correct output:
963.33
5066.42
1320.12
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 5:
---- input:
5426.20
---- correct output:
1465.07
7705.2
2007.69
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- TEST CASE 6:
---- input:
12.15
---- correct output:
3.28
17.25
4.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    n = float(inptu())
              ^^^^^
NameError: name 'inptu' is not defined. Did you mean: 'input'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
